updated layout to make .visibile-mobile work global, fixed nav, comment login buttons

--- a/assets/less/layout.less
+++ b/assets/less/layout.less
@@ -139,3 +139,19 @@
     .siteWidth();
   }
 }
+
+//////////////////////////////////////////////////////
+// Global Hiding & Revealing Classes
+//////////////////////////////////////////////////////
+
+.visible-mobile { 
+  display: none !important;
+
+  .betweenMobileTablet({
+    display: block !important;
+    });
+
+  .mobileLandscape({
+    display: block !important;
+    });
+ }
