--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -48,22 +48,6 @@
 }
 
 //////////////////////////////////////////////////////
-// Global Hiding & Revealing Classes
-//////////////////////////////////////////////////////
-
-.visible-mobile { 
-  display: none;
-
-  .betweenMobileTablet({
-    display: block;
-    });
-
-  .mobileLandscape({
-    display: block;
-    });
- }
-
-//////////////////////////////////////////////////////
 // Mixins for @media queries
 //////////////////////////////////////////////////////
 
