--- a/assets/less/modules/comments.less
+++ b/assets/less/modules/comments.less
@@ -272,8 +272,8 @@ ul.comments-login {
 .comments-login-item {
   margin: 0 @marginBottom calc(@marginBottom * 0.5) 0;
   vertical-align: middle;
-  display: block;  
-  float: left;
+  display: inline-block;  
+  margin-right: 5px;
 
   span {
     .uppercaseFont(12px);
